--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,16 +2,27 @@
 %html{html_attrs(I18n.locale)}
   %head
     %title= @content_for_title
-    = stylesheet_link_tag :all
+    = stylesheet_link_tag 'compiled/screen', :media => 'screen, projection'
+    = stylesheet_link_tag 'compiled/print', :media => 'print'
+    /[if lt IE 8]
+      = stylesheet_link_tag 'compiled/ie', :media => 'screen, projection'
+    = stylesheet_link_tag 'compiled/application', :media => 'screen, projection'
     = javascript_include_tag :defaults
     = csrf_meta_tag
-  %body
-    #main-menu
-      Main menu
-      = menu :depth => 1
-    %h1= @content_for_title
-    Sub menu
-    #sub-menu
-      = menu :entry_level => 1, :expand_only_active => true
-    #content= yield
-    #sidebar= yield :sidebar
+  %body(class='bp three-col')
+    #container
+      #header
+        #main-menu
+          = menu :depth => 1
+      #sidebar
+        #sub-menu
+          %small Submenu
+          = menu :entry_level => 1, :expand_only_active => true
+        #sidebar-content
+          = yield :sidebar
+      #content
+        %h1= @content_for_title
+        = yield
+      #footer
+        %small Sitemap
+        = menu :depth => 2
