--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,8 @@
       #header
         #main-menu
           = menu :depth => 1
+        #logo
+          = image_tag 'contoyo_logo.png'
       #sidebar
         #sub-menu
           %small Submenu
